# SetFinder

./: .gitignore  config.py  pyproject.toml  run.py
app/: routes.py
app/backend/setfinder/: setfinder.py
app/templates/: index.html
expl/: find_if_cards_from_a_set.ipynb  recognize_cards_w_opencv.ipynb
setfinder/: setfinder.py
