[tool.poetry]
name = "setfinder"
version = "0.1.0"
description = ""
authors = ["GeMixl <g.michl@gmx.net>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
